force-app/main/default/objects/Opportunity_Playbook_Template__mdt/Opportunity_Playbook_Template__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Playbook Template</label>
    <pluralLabel>Opportunity Playbook Templates</pluralLabel>
</CustomObject>