force-app/main/default/objects/Opportunity_Playbook_Template__mdt/fields/Task_Desciption__c.field-meta.xml
<CustomField>
    <fullName>Task_Desciption__c</fullName>
    <label>Task Desciption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>